Add post page, fix tests

--- a/src/components/views/Post/Post.module.scss
+++ b/src/components/views/Post/Post.module.scss
@@ -1,4 +1,39 @@
 @import '../../../styles/settings.scss';
 
-// .root {
-// }
+.root {
+  max-width: 80%;
+  margin: 30px auto;
+  box-shadow: 8px 8px 24px 0px rgba(66, 68, 90, 1);
+  border-radius: 20px 20px 20px 20px;
+
+  .postContainer {
+    padding: 10px;
+
+    .imageWrapper {
+      .image {
+        height: 350px;
+        max-width: 100%;
+        height: auto;
+        max-height: 400px;
+        text-align: center;
+      }
+    }
+
+    .content {
+      position: relative;
+      .contact {
+        position: absolute;
+        bottom: 5%;
+
+        .iconWrapper {
+          position: relative;
+          left: 30px;
+          .icon {
+            position: absolute;
+            left: -30px
+          }
+        }
+      }
+    }
+  }
+}
