--- a/src/components/views/NotFound/NotFound.module.scss
+++ b/src/components/views/NotFound/NotFound.module.scss
@@ -1,4 +1,11 @@
 @import '../../../styles/settings.scss';
 
-// .root {
-// }
+.root {
+  text-align: center;
+
+  .image {
+    width: 70%;
+    //max-width: 70%;
+    height: auto;
+  }
+}
